--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
 .footer_upper {
   background-image: url("../public/images/footer_upper.png");
 }
-.workwith {
-  background-image: url("../public/images/footer_upper.png");
+.menu-flags button {
+  border: none;
+  padding: 0 3px;
+}
+.ReactFlagsSelect-module_selectBtn__19wW7:after,
+.ReactFlagsSelect-module_selectBtn__19wW7[aria-expanded="true"]:after {
+  margin-left: 0 !important;
+}
+.ReactFlagsSelect-module_label__27pw9 {
+  overflow-x: hidden;
+  min-width: 130px;
+  text-align: left;
 }
